--- a/Medical-History-master/app/build.gradle
+++ b/Medical-History-master/app/build.gradle
@@ -71,6 +71,8 @@ dependencies {
     //support libraries
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    implementation 'com.google.firebase:firebase-auth-ktx:21.0.6'
+    implementation 'com.google.firebase:firebase-database-ktx:20.0.5'
 
     def room_version = "2.4.2"
     implementation "androidx.room:room-runtime:$room_version"
